# AgendaLLM

./: .env.example  .gitignore  DocumentTesting.py  FrontTest.py  README.md  assistant.py  assistant_chat.py  build-assistant.py  embedding.py  file_tester.py  file_upload_test.py  interface.py  local_llama_example.py  ollamaembedingtest.py  pyproject.toml  requirements.txt  something.csv
examplefiles/: 2  3  one
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
