[tool.poetry]
name = "agenda-llm"
version = "0.1.0"
description = "TODO caleb fill this out"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pinecone = "^5.3.1"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
